welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:30: error: not found: value estSurBlanc
	}while (!estSurBlanc())
                 ^