welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	def faireV(){
	var nbPas = 0 
	do {
		avance()
		nbPas = nbPas + 1 
		avance()
		nbPas = nbPas + 1
		gauche()
		avance()
		nbPas = nbPas + 1
		retourne()
		avance()
		nbPas = nbPas + 1
		gauche()
		avance()
		nbPas = nbPas + 1
		avance()
		gauche()
		
			
	} while (nbPas != 6)
}
def dessinerV(){
	do{
		avance()
		baisseBrosse()
		leveBrosse()
	}while (!estSurBlanc())
}
	
}
	



